Color Correction #2 (Dark Mode)

--- a/_sass/_default.scss
+++ b/_sass/_default.scss
@@ -101,10 +101,17 @@
     * {
       color: rgb(248,248,248);
     }
+    header-brand {
+      * {
+        color: rgb(248,248,248); 
+      }
+    }
+
   }
   .menu-content a {
     color: rgb(248,248,248);
   }
+
 }
 
 /*
